test/end-to-end/compile-errors/variant-member-of-non-variant.crow
main void()
	_ bool = m

m record bool variant-member
